name:                streaming-conduit
version:             0.1.0
synopsis:            Bidirectional support between the streaming and conduit libraries
-- description:
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Conduit
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <5
                     , conduit >= 1.2.1 && < 1.3
                     , streaming >= 0.1.3.0 && < 0.2
                     , transformers >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
